add - adicionei uma exlicação de tag

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </head>
 
 <body>
-    
 <header>
 <h1>Explorando Tags Básicas</h1>
 </header>  
 
 <main>
+<p>h1 até h6, São tags de títulos e subtítulos. h1 é o maior e o h6 é o menor</p>
 
 </main>
     
