--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 <body>
 <header>
-<h1>Explorando Tags Básicas</h1>
+<center><h1>Explorando Tags Básicas</h1></center>
 </header>  
 
 <main>
 <p>h1 até h6, São tags de títulos e subtítulos. h1 é o maior e o h6 é o menor</p>
-
+<p>tag: &lt; p &gt; </p>
 </main>
     
 <footer>
