add - adicionei mais explicações

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <main>
 <p>h1 até h6, São tags de títulos e subtítulos. h1 é o maior e o h6 é o menor</p>
-<p>tag: &lt; p &gt; </p>
+<p>tag: &lt; p &gt; Define um parágrafo de texto.  </p>
+<p>tag: &lt; a &gt;Cria um link para outra página ou site.</p>
+<p>tag: &lt; img &gt;Exibe uma imagem na página.</p>
 </main>
     
 <footer>
