add - adicionei mais informações para as tags

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 </header>  
 
 <main>
+<p>tag: &lt; html &gt; É a tag principal do documento. Todo o conteúdo da página fica dentro dela. Ela não aparece na tela. Apenas organiza toda a estrutura do site. </p>
+<p>tag: &lt; head &gt; Guarda informações sobre a página, como título e configurações. Não aparece diretamente na página. </p>
+<p>tag: &lt; title &gt; Define o título que aparece na aba do navegador. </p>
 <p>h1 até h6, São tags de títulos e subtítulos. h1 é o maior e o h6 é o menor</p>
-<p>tag: &lt; p &gt; Define um parágrafo de texto.  </p>
-<p>tag: &lt; a &gt;Cria um link para outra página ou site.</p>
-<p>tag: &lt; img &gt;Exibe uma imagem na página.</p>
+<p>tag: &lt; p &gt; Define um parágrafo de texto. O texto aparece separado em formato de parágrafo.  </p>
+<p>tag: &lt; a &gt;Cria um link para outra página ou site. Aparece como um texto clicável.</p>
+<p>tag: &lt; img &gt;Exibe uma imagem na página. A imagem aparece na tela.</p>
+
 </main>
     
 <footer>
