--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
 <header>
 <center><h1>Explorando Tags Básicas</h1></center>
-<h2>com o Pedro Paulo!</h2>
+<center><h4>com o Pedro Paulo!</h4></center>
 </header>  
 
 <main>
 <p>tag: &lt; html &gt; É a tag principal do documento. Todo o conteúdo da página fica dentro dela. Ela não aparece na tela. Apenas organiza toda a estrutura do site. </p>
 <p>tag: &lt; head &gt; Guarda informações sobre a página, como título e configurações. Não aparece diretamente na página. </p>
-<p>tag: &lt; title &gt; Define o título que aparece na aba do navegador. </p>
+<p>tag: &lt; title &gt; Define o título que aparece na aba do navegador. "Título da página" </p>
 <p>tag: &lt; meta &gt; Define configurações importantes, como codificação de caracteres e responsividade. Não aparece na página. Funciona “por trás”. </p>
 <p>tag: &lt; h1 &gt; até &lt; h6 &gt;, São tags de títulos e subtítulos. h1 é o maior e o h6 é o menor</p>
 <p>tag: &lt; p &gt; Define um parágrafo de texto. O texto aparece separado em formato de parágrafo.  </p>
@@ -22,11 +22,11 @@
 <p>tag: &lt; button &gt; é usada para criar um botão clicável na página.</p>
 <a href="https://www.google.com/"> <button> Acessar o Google </button> </a>
 <p>tag: &lt; img &gt;Exibe uma imagem na página. A imagem aparece na tela.</p>
-
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPufWr4kXYyF0aLvzd3Papt4wnSDBvRoS_PQ&s" alt="imagem senai">
 </main>
     
 <footer>
-
+<p>tag: &lt; footer &gt; Representa o rodapé da página. Fica no final da página, com informações extras. </p>
 </footer>
 
 
