--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
 <header>
 <center><h1>Explorando Tags Básicas</h1></center>
-<center><h4>com o Pedro Paulo!</h4></center>
+<center><h4>Com o Pedro Paulo!</h4></center>
 </header>  
 
 <main>
-<p>tag: &lt; html &gt; É a tag principal do documento. Todo o conteúdo da página fica dentro dela. Ela não aparece na tela. Apenas organiza toda a estrutura do site. </p>
+<center><p>tag: &lt; html &gt; É a tag principal do documento. Todo o conteúdo da página fica dentro dela. Ela não aparece na tela. Apenas organiza toda a estrutura do site. </p>
 <p>tag: &lt; head &gt; Guarda informações sobre a página, como título e configurações. Não aparece diretamente na página. </p>
 <p>tag: &lt; title &gt; Define o título que aparece na aba do navegador. "Título da página" </p>
 <p>tag: &lt; meta &gt; Define configurações importantes, como codificação de caracteres e responsividade. Não aparece na página. Funciona “por trás”. </p>
@@ -22,11 +22,11 @@
 <p>tag: &lt; button &gt; é usada para criar um botão clicável na página.</p>
 <a href="https://www.google.com/"> <button> Acessar o Google </button> </a>
 <p>tag: &lt; img &gt;Exibe uma imagem na página. A imagem aparece na tela.</p>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPufWr4kXYyF0aLvzd3Papt4wnSDBvRoS_PQ&s" alt="imagem senai">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPufWr4kXYyF0aLvzd3Papt4wnSDBvRoS_PQ&s" alt="imagem senai"></center>
 </main>
     
 <footer>
-<p>tag: &lt; footer &gt; Representa o rodapé da página. Fica no final da página, com informações extras. </p>
+<center><p>tag: &lt; footer &gt; Representa o rodapé da página. Fica no final da página, com informações extras. </p></center>
 </footer>
 
 
