--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 </header>  
 
 <main>
-<center><p>tag: &lt; html &gt; É a tag principal do documento. Todo o conteúdo da página fica dentro dela. Ela não aparece na tela. Apenas organiza toda a estrutura do site. </p>
-<p>tag: &lt; head &gt; Guarda informações sobre a página, como título e configurações. Não aparece diretamente na página. </p>
-<p>tag: &lt; title &gt; Define o título que aparece na aba do navegador. "Título da página" </p>
-<p>tag: &lt; meta &gt; Define configurações importantes, como codificação de caracteres e responsividade. Não aparece na página. Funciona “por trás”. </p>
-<p>tag: &lt; h1 &gt; até &lt; h6 &gt;, São tags de títulos e subtítulos. h1 é o maior e o h6 é o menor</p>
-<p>tag: &lt; p &gt; Define um parágrafo de texto. O texto aparece separado em formato de parágrafo.  </p>
-<p>tag: &lt; a &gt;Cria um link para outra página ou site. Aparece como um texto clicável.</p> 
-<p>tag: &lt; button &gt; é usada para criar um botão clicável na página.</p>
+<center><p>1- tag: &lt; html &gt; É a tag principal do documento. Todo o conteúdo da página fica dentro dela. Ela não aparece na tela. Apenas organiza toda a estrutura do site. </p>
+<p>2- tag: &lt; head &gt; Guarda informações sobre a página, como título e configurações. Não aparece diretamente na página. </p>
+<p>3- tag: &lt; title &gt; Define o título que aparece na aba do navegador. "Título da página" </p>
+<p>4- tag: &lt; meta &gt; Define configurações importantes, como codificação de caracteres e responsividade. Não aparece na página. Funciona “por trás”. </p>
+<p>5- tag: &lt; h1 &gt; até &lt; h6 &gt;, São tags de títulos e subtítulos. h1 é o maior e o h6 é o menor</p>
+<p>6- tag: &lt; p &gt; Define um parágrafo de texto. O texto aparece separado em formato de parágrafo.  </p>
+<p>7- tag: &lt; a &gt;Cria um link para outra página ou site. Aparece como um texto clicável.</p> 
+<p>8- tag: &lt; button &gt; é usada para criar um botão clicável na página.</p>
 <a href="https://www.google.com/"> <button> Acessar o Google </button> </a>
-<p>tag: &lt; img &gt;Exibe uma imagem na página. A imagem aparece na tela.</p>
+<p>9- tag: &lt; img &gt;Exibe uma imagem na página. A imagem aparece na tela.</p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPufWr4kXYyF0aLvzd3Papt4wnSDBvRoS_PQ&s" alt="imagem senai"></center>
 </main>
     
 <footer>
-<center><p>tag: &lt; footer &gt; Representa o rodapé da página. Fica no final da página, com informações extras. </p></center>
+<center><p>10- tag: &lt; footer &gt; Representa o rodapé da página. Fica no final da página, com informações extras. </p></center>
 </footer>
 
 
